Fix to button display on mobile devices

--- a/assets/css/filter.css
+++ b/assets/css/filter.css
@@ -7,3 +7,8 @@
 {
     display:flex;
 }
+
+.filterMode
+{
+    
+}
